@@ -2,6 +2,8 @@ DFHack future
 
   Internals:
     - support for calling a lua function via a protobuf request (demonstrated by dfhack-run --lua).
+  New scripts:
+    - gui/mod-manager: allows installing/uninstalling mods into df from df/mods directory.
 
   New commands:
     - move the 'grow', 'extirpate' and 'immolate' commands as 'plant' subcommands
@@ -53,6 +55,7 @@ DFHack v0.34.11-r4
     - outsideOnly: make raw-specified buildings impossible to build inside
     - resume: A plugin to help display and resume suspended constructions conveniently
     - stocks: An improved stocks display screen.
+	- rendermax: a heap of rendering experiments. Including one that does lighting.
   Internals:
     - Core: there is now a per-save dfhack.init file for when the save is loaded, and another for when it is unloaded
     - EventManager: fixed job completion detection, fixed removal of TICK events, added EQUIPMENT_CHANGE event
